@@ -1,6 +1,7 @@
 2003-03-11  Bernhard Held <bernhard@bernhardheld.de>
 
         * src/SDCCloop.c (mergeRegions): an evil beast is dead
+	* src/SDCCmain.c (preProcess): minor cleanup: eliminate preOutName
 
 2003-03-10  Borut Razem <borut.razem@siol.net>
 
